--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   equatable: ^2.0.5
   flutter_bloc: ^8.1.3
   google_fonts: ^6.1.0
+  dio: ^5.3.3
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
@@ -64,9 +66,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/rocket_icon.png
+    
+    - assets/images/spacex.jpeg 
+     #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
