--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_fonts: ^6.1.0
   dio: ^5.3.3
   carousel_slider: ^4.2.1
+  url_launcher: ^6.1.14
 
 dev_dependencies:
   flutter_test:
